--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "dependencies": {
     "@mantine/core": "8.3.12",
+    "@mantine/dropzone": "^8.3.12",
+    "@mantine/form": "^8.3.12",
     "@mantine/hooks": "8.3.12",
+    "@mantine/nprogress": "^8.3.12",
+    "@tanstack/react-query": "^5.90.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
