--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@mantine/form": "^8.3.12",
     "@mantine/hooks": "8.3.12",
     "@mantine/nprogress": "^8.3.12",
+    "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-query": "^5.90.19",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
+    "react-to-print": "^3.2.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
@@ -41,6 +45,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/html2canvas": "^0.5.35",
     "@types/node": "^25.0.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
